@@ -19,7 +19,12 @@ set(tests
 foreach(test ${tests})
   add_executable(${test}test ${test}test.cpp)
   target_link_libraries(${test}test ${BABEL_LIBRARY})
-  add_test(${test}_Test ${CMAKE_BINARY_DIR}/test/${test}test)
+  if(NOT MSVC)
+    add_test(${test}_Test ${CMAKE_BINARY_DIR}/test/${test}test)
+  else(NOT MSVC)
+    add_test(${test}_Test ${CMAKE_BINARY_DIR}/src/${test}test)
+  endif(NOT MSVC)
+  set_target_properties(${test}test PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/src")
   set_tests_properties(${test}_Test PROPERTIES FAIL_REGULAR_EXPRESSION "ERROR;FAIL;Test failed")
 endforeach(test ${tests})
 
@@ -62,7 +67,12 @@ set(old_tests
 foreach(test ${old_tests})
   add_executable(${test} ${test}.cpp)
   target_link_libraries(${test} ${BABEL_LIBRARY})
-  add_test(${test}_Test ${CMAKE_BINARY_DIR}/test/${test})
+  if(NOT MSVC)
+    add_test(${test}_Test ${CMAKE_BINARY_DIR}/test/${test})
+  else(NOT MSVC)
+    add_test(${test}_Test ${CMAKE_BINARY_DIR}/src/${test})
+  endif(NOT MSVC)
+  set_target_properties(${test} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/src")
   set_tests_properties(${test}_Test PROPERTIES FAIL_REGULAR_EXPRESSION "not ok")
 endforeach(test ${old_tests})
 
