@@ -1,0 +1,1 @@
+default_build "-DENABLE_TESTS=ON"
